# NL2Sh

./: .gitignore  README.md  demo.ipynb  digest.txt  git_history.txt  pyproject.toml  runme.ipynb
nl2sh/: inference.py  main.py
nl2sh/agents/: base.py  clarifier.py  composer.py  inspector.py  llm_service.py
nl2sh/data/: dataloader.py  nl2bash_eval_50.jsonl  nl2bash_finetune_1000.jsonl  nl2bash_finetune_750.jsonl  nl2bash_validation_50.jsonl
nl2sh/evaluator/: evaluator.py
nl2sh/prompts/: clarifier_pmpt.py  composer_pmpt.py  eval_pmpt.py  inspector_pmpt.py
